18Error/src/main/java/com/example/Error/CustomExp.java
package com.example.Error;

public class CustomExp extends Exception {

    public CustomExp(String name) {
        super(name);

    }
}
